# Textbook-for-Teaching-Physical-AI-Humanoid-Robotics-Course

./: .gitignore  404.html  QWEN.md  README.md  combine_book.py  docusaurus.config.js  index.html  my_book.txt  package-lock.json  package.json  sitemap.xml
.specify/memory/: constitution.md
assets/css/: styles.3d857ee1.css  styles.b1ae60b0.css
assets/js/: 06a97fe8.b7b71616.js  0932c723.220eb46c.js  0932c723.34bb7cc8.js  0aabe4e1.0ce4eb5c.js  0aabe4e1.57bfc92a.js  0c6d4beb.33d4c206.js  0c6d4beb.a2fee17f.js  0e384e19.ede6d22c.js  0e384e19.f66ba516.js  0e43a162.bec0930a.js  0e43a162.c95d2a65.js  149b965c.7ad9da61.js  149b965c.ab5e666f.js  177b73a8.1088b22c.js  177b73a8.64e3a76f.js  17896441.cfdbddcc.js  1aaa7d14.0b974227.js  1aaa7d14.ac1f6e28.js  1d476d95.9618d311.js  1d476d95.ed773b87.js  1eee00d2.984bc531.js  1eee00d2.c4c9a288.js  2237.d8bb4d3d.js  2237.eb165358.js  2a6bf8f2.56161d5d.js  2a6bf8f2.c293005a.js  2b0f184e.52a4a298.js  2b0f184e.a64a4f31.js  31d76455.1de9146c.js  31d76455.ad04616e.js  3720c009.4289a9f9.js  3a8dd9de.752998c1.js  3a8dd9de.c00824f7.js  42c934e1.1f576add.js  42c934e1.e1ce6892.js  472907aa.2019e8e1.js  472907aa.e3ff8e59.js  4844dd5c.8c484c36.js  4981eac1.81cdb2bd.js  4981eac1.c6fbc967.js  (+92 more)
backend/: main.py  pyproject.toml  requirements.txt  test_main.py  test_pipeline.py  test_qdrant.py
backend_backup/: .env.example  .gitignore  README.md  requirements.txt
backend_backup/demo/: API_Documentation.md  (+3 more)
docs/: index.html  intro.md
frontend/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
tags/: index.html
(+255 files in other folders)
